--- a/pull_linkedin_follower_count/cloudbuild.yaml
+++ b/pull_linkedin_follower_count/cloudbuild.yaml
@@ -7,7 +7,7 @@ steps:
     args: ["-m", "pip", "install", "-r", "requirements.txt", "--user"]
   - name: python
     entrypoint: python
-    args: ["-m", "pytest", "pull_linkedin_follower_count/", "-v", "--cov"]
+    args: ["-m", "pytest", "-v", "--cov"]
   - name: 'gcr.io/cloud-builders/gcloud'
     args: ['functions', 'deploy', 'pull_linkedin_follower_count_cicd', '--trigger-http', '--runtime', 'python311', '--source', '--entry-point', 'validate_http']
 options:
