--- a/pull_linkedin_follower_count/cloudbuild.yaml
+++ b/pull_linkedin_follower_count/cloudbuild.yaml
@@ -8,12 +8,7 @@ steps:
   - name: python
     entrypoint: python
     args: ["-m", "pytest", "-v", "--cov"]
-    secretEnv: ['TOKEN']
   - name: 'gcr.io/cloud-builders/gcloud'
-    args: ['functions', 'deploy', 'pull_linkedin_follower_count_cicd', '--trigger-http', '--runtime', 'python311', '--source', '--entry-point', 'validate_http', '--set-secrets', 'TOKEN=projects/13410613811/secrets/linkedin_api_access_token:2']
+    args: ['functions', 'deploy', 'pull_linkedin_follower_count_cicd', '--trigger-http', '--runtime', 'python311', '--source', '--entry-point', 'validate_http']
 options:
   logging: CLOUD_LOGGING_ONLY
-availableSecrets:
-  secretManager:
-  - versionName: projects/$PROJECT_ID/secrets/linkedin_api_access_token/versions/2
-    env: 'TOKEN'
