--- a/pull_linkedin_follower_count/cloudbuild.yaml
+++ b/pull_linkedin_follower_count/cloudbuild.yaml
@@ -10,7 +10,7 @@ steps:
     args: ["-m", "pytest", "-v", "--cov"]
     secretEnv:  ['TOKEN']
   - name: 'gcr.io/cloud-builders/gcloud'
-    args: ['functions', 'deploy', 'pull_linkedin_follower_count_cicd', '--trigger-http', '--runtime', 'python311', '--source', 'main', '--entry-point', 'validate_http', '--set-secrets', 'TOKEN=projects/13410613811/secrets/linkedin_api_access_token:latest']
+    args: ['functions', 'deploy', 'pull_linkedin_follower_count_cicd', '--trigger-http', '--runtime', 'python311', '--entry-point', 'validate_http', '--set-secrets', 'TOKEN=projects/13410613811/secrets/linkedin_api_access_token:latest']
 options:
   logging: CLOUD_LOGGING_ONLY
 availableSecrets:
