Changed location of requirements.txt

--- a/pull_linkedin_follower_count/cloudbuild.yaml
+++ b/pull_linkedin_follower_count/cloudbuild.yaml
@@ -5,6 +5,7 @@ steps:
   - name: python
     entrypoint: python
     args: ["-m", "pip", "install", "-r", "requirements.txt", "--user"]
+    dir: 'pull_linkedin_follower_count'
   - name: python
     entrypoint: python
     args: ["-m", "pytest", "-v", "--cov"]
