--- a/pull_linkedin_follower_count/cloudbuild.yaml
+++ b/pull_linkedin_follower_count/cloudbuild.yaml
@@ -11,11 +11,7 @@ steps:
     args: ["-m", "pytest", "-v", "--cov"]
     secretEnv:  ['TOKEN']
   - name: 'gcr.io/cloud-builders/gcloud'
-    args: ['functions', 'deploy', 'pull_linkedin_follower_count_cicd', '--trigger-http', '--runtime', 'python311', '--entry-point', 'validate_http', '--set-secrets', 'TOKEN=projects/13410613811/secrets/linkedin_api_access_token:latest']
+    args: ['functions', 'deploy', 'pull_linkedin_follower_count_cicd', '--region', 'asia-east1', '--trigger-http', '--runtime', 'python311', '--entry-point', 'validate_http']
     dir: 'pull_linkedin_follower_count'
 options:
   logging: CLOUD_LOGGING_ONLY
-availableSecrets:
-  secretManager:
-  - versionName: projects/$PROJECT_ID/secrets/linkedin_api_access_token/versions/latest
-    env: 'TOKEN'
