--- a/pull_linkedin_follower_count/requirements.txt
+++ b/pull_linkedin_follower_count/requirements.txt
@@ -5,10 +5,12 @@ attrs==23.1.0
 blinker==1.6.2
 cachetools==5.3.1
 certifi==2023.5.7
+cffi==1.15.1
 charset-normalizer==3.1.0
 click==8.1.3
 cloudevents==1.9.0
 coverage==7.2.7
+cryptography==41.0.1
 db-dtypes==1.1.1
 decorator==5.1.1
 deprecation==2.1.0
@@ -47,17 +49,20 @@ packaging==23.1
 pandas==2.0.2
 pandas-gbq==0.19.2
 pluggy==1.0.0
+ply==3.11
 proto-plus==1.22.2
 protobuf==4.23.2
 pyarrow==12.0.1
 pyasn1==0.5.0
 pyasn1-modules==0.3.0
 pycodestyle==2.10.0
+pycparser==2.21
 pydata-google-auth==1.8.0
 pyflakes==3.0.1
 pytest==7.3.2
 pytest-cov==4.1.0
 python-dateutil==2.8.2
+python-dotenv==1.0.0
 pytz==2023.3
 requests==2.31.0
 requests-oauthlib==1.3.1
