--- a/pull_linkedin_video_viewers/cloudbuild.yaml
+++ b/pull_linkedin_video_viewers/cloudbuild.yaml
@@ -5,15 +5,15 @@ steps:
   - name: python
     entrypoint: python
     args: ["-m", "pip", "install", "-r", "requirements.txt", "--user"]
-    dir: 'pull_linkedin_videos'
+    dir: 'pull_linkedin_video_viewers'
   - name: python
     entrypoint: python
     args: ["-m", "pytest", "-v", "--cov"]
     secretEnv: ['TOKEN']
-    dir: 'pull_linkedin_videos'
+    dir: 'pull_linkedin_video_viewers'
   - name: 'gcr.io/cloud-builders/gcloud'
     args: ['functions', 'deploy', 'pull_linkedin_videos_cicd', '--trigger-http', '--runtime', 'python311', '--entry-point', 'validate_http', '--set-secrets', 'TOKEN=projects/13410613811/secrets/linkedin_api_access_token:latest']
-    dir: 'pull_linkedin_videos'
+    dir: 'pull_linkedin_video_viewers'
 options:
   logging: CLOUD_LOGGING_ONLY
 availableSecrets:
