--- a/pull_linkedin_follower_count/requirements.txt
+++ b/pull_linkedin_follower_count/requirements.txt
@@ -17,6 +17,7 @@ deprecation==2.1.0
 drypy==1.0.1
 flake8==6.0.0
 Flask==2.3.2
+flatten-json==0.1.13
 frozenlist==1.3.3
 fsspec==2023.6.0
 functions-framework==3.4.0
